[FEAT] add AAMAS paper

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <td> now </td>
                             <td> IBM </td>
                             <td> CompNeuro & AI Foundations Groups</td>
-                            <td> <a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p15">[15]</a><a href="#p18">[18]</a> </td>
+                            <td> <a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p15">[15]</a><a href="#p18">[18]</a><a href="#p19">[19]</a> </td>
                             <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td>
                         </tr>
                         <tr>
@@ -114,7 +114,7 @@
                             <td> 2017 </td>
                             <td> Microsoft </td>
                             <td> EPIC & HCI Groups </td>
-                            <td> <a href="#p19">[19]</a></td>
+                            <td> <a href="#p20">[20]</a></td>
                             <td> <span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td>
                         </tr>
                         <tr>
@@ -130,7 +130,7 @@
                             <td> now </td>
                             <td> </td>
                             <td> Neuro Theory Center (PI: Qian) </td>
-                            <td> <a href="#p10">[10]</a><a href="#p20">[20]</a></td>
+                            <td> <a href="#p10">[10]</a><a href="#p21">[21]</a></td>
                             <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td>
                         </tr>
                         <tr>
@@ -203,7 +203,7 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
             <div class="my-auto">
                 <h2 class="mb-5">Publications</h2>
-                <p class="mb-5 text-primary"> <b>20</b> total = <b>10</b> conferences + <b>6</b> journals + <b>4</b> manuscript / arXiv preprints &nbsp;
+                <p class="mb-5 text-primary"> <b>21</b> total = <b>11</b> conferences + <b>6</b> journals + <b>4</b> manuscript / arXiv preprints &nbsp;
                     <br /> (click on <b> abstract </b> to learn more) &nbsp; </p>
                 <h3> ongoing...</h3>
                 <br />
@@ -214,7 +214,7 @@
                                 <img src="./img/publications/lin2019unsupervised.png" alt="lin2019reinforce" border="1" style="width:100%">
                             </div>
                             <div class="textcolumn">
-                                [20]&nbsp;<b class="text-primary" id="p20"> Unsupervised Attention Mechanism across Neural Network Layers &nbsp; </b>
+                                [21]&nbsp;<b class="text-primary" id="p21"> Unsupervised Attention Mechanism across Neural Network Layers &nbsp; </b>
                                 <br />
                                 <b><span style="color: dimgray;">Baihan Lin</span></b>
                                 <br />
@@ -237,7 +237,7 @@
                                 <img src="./img/publications/gonzalez2019enhance.png" alt="gonzalez2019enhance" border="1" style="width:100%">
                             </div>
                             <div class="textcolumn">
-                                [19]&nbsp; <b class="text-primary" id="p19"> Elongated arm reach after a Pinocchio illusion in Virtual Reality &nbsp; </b>
+                                [20]&nbsp; <b class="text-primary" id="p20"> Elongated arm reach after a Pinocchio illusion in Virtual Reality &nbsp; </b>
                                 <br /> Mar Gonzalez-Franco, Christopher Berger, <b><span style="color: dimgray;">Baihan Lin</span></b>, Bigna Lenggenhager, and Jaron Lanier
                                 <br />
                                 <br/>
@@ -246,6 +246,31 @@
                                 <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
                                 <div class="abstract">
                                     <p> Perceived extension of the reach of one’s arm was observed in healthy humans after eliciting a Pinocchio Illusion—whereby a participant’s nose is illusorily elongated—in Virtual Reality. Self-administered tapping on the tip of the nose of the participants’ virtual avatar (using a hand-held controller) while the nose of the avatar slowly grew, produced a Pinocchio illusion an implicit outward drift in the participants’ arm, and the elongation of the perceived reach of their arm. We found a positive correlation between the extent of the implicit outward drift of the participants arm and the perceived reachability of distal objects. These results were found, both when the participants’ real nose was stimulated and when it was not. These findings are discussed in the context of theories on body schema and ownership, and open new avenues for hand grasp interaction with virtual objects out of arm’s-reach inside immersive setups. </p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <br />
+                    <li>
+                        <div class="row">
+                            <div class="imgcolumn">
+                                <img src="./img/publications/lin2020astory.gif" alt="lin2020astory" border="1" style="width:100%;padding-top:100%">
+                            </div>
+                            <div class="textcolumn">
+                                [19]&nbsp;<b class="text-primary" id="p19"> A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry &nbsp; </b>
+                                <br />
+                                <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish
+                                <br />
+                                <br/>
+                                <p style="color:black"> AAMAS 2020 </p>
+                                [
+                                <a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">arXiv</a> ]&nbsp; [
+                                <!-- <a href="./pdfs/NIPS_HumanQL_poster.pdf" style="color:#268fd6">poster</a> ]&nbsp; [ -->
+                                <a href="./bibTex/lin2020astory.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
+                                <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">code</a> ]&nbsp; [
+                                <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
+                                <div class="abstract">
+                                    <p> Drawing an inspiration from behavioral studies of human decision making, we propose here a more general and flexible parametric framework for reinforcement learning that extends standard Q-learning to a two-stream model for processing positive and negative rewards, and allows to incorporate a wide range of reward-processing biases -- an important component of human decision making which can help us better understand a wide spectrum of multi-agent interactions in complex real-world socioeconomic systems, as well as various neuropsychiatric conditions associated with disruptions in normal reward processing. From the computational perspective, we observe that the proposed Split-QL model and its clinically inspired variants consistently outperform standard Q-Learning and SARSA methods, as well as recently proposed Double Q-Learning approaches, on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the Pac-Man game in a lifelong learning setting across different reward stationarities. </p>
                                 </div>
                             </div>
                         </div>
@@ -261,7 +286,7 @@
                                 <img src="./img/publications/lin2019reinforce.png" alt="lin2019reinforce" border="1" style="width:100%">
                             </div>
                             <div class="textcolumn">
-                                [18]&nbsp;<b class="text-primary" id="p18"> A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry &nbsp; </b>
+                                [18]&nbsp;<b class="text-primary" id="p18"> Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders &nbsp; </b>
                                 <br />
                                 <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish
                                 <br />
@@ -274,7 +299,7 @@
                                 <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">code</a> ]&nbsp; [
                                 <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
                                 <div class="abstract">
-                                    <p> Drawing an inspiration from behavioral studies of human decision making, we propose here a more general and flexible parametric framework for reinforcement learning that extends standard Q-learning to a two-stream model for processing positive and negative rewards, and allows to incorporate a wide range of reward-processing biases -- an important component of human decision making which can help us better understand a wide spectrum of multi-agent interactions in complex real-world socioeconomic systems, as well as various neuropsychiatric conditions associated with disruptions in normal reward processing. From the computational perspective, we observe that the proposed Split-QL model and its clinically inspired variants consistently outperform standard Q-Learning and SARSA methods, as well as recently proposed Double Q-Learning approaches, on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the Pac-Man game in a lifelong learning setting across different reward stationarities. </p>
+                                    <p> Drawing an inspiration from behavioral studies of human decision making, we propose here a more general and flexible parametric framework for reinforcement learning that extends standard Q-learning to a two-stream model for processing positive and negative rewards, and allows to incorporate a wide range of reward-processing biases -- an important component of human decision making which can help us better understand a wide spectrum of multi-agent interactions in complex real-world socioeconomic systems, as well as various neuropsychiatric conditions associated with disruptions in normal reward processing. From the computational perspective, we observe that the proposed Split-QL model and its clinically inspired variants consistently outperform standard Q-Learning and SARSA methods, as well as recently proposed Double Q-Learning approaches, on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the Pac-Man game in a lifelong learning setting across different reward stationarities. Moreover, from the behavioral modeling perspective, our parametric framework can be viewed as a first step towards a unifying computational model capturing reward processing abnormalities across multiple mental conditions and user preferences in long-term recommendation systems.  </p>
                                 </div>
                             </div>
                         </div>
