--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <li>
                         <div class="row">
                             <div class="imgcolumn">
-                                <img src="./img/publications/lin2020astory.gif" alt="lin2020astory" border="1" style="width:100%;height:100%">
+                                <img src="./img/publications/lin2020astory.gif" alt="lin2020astory" border="1" style="width:100%">
                             </div>
                             <div class="textcolumn">
                                 [19]&nbsp;<b class="text-primary" id="p19"> A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry &nbsp; </b>
