--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 
 <head>
     <div w3-include-html="./html/header.html"></div>
-    <script>
-        w3IncludeHTML();
-    </script>
+    <script> w3IncludeHTML();  </script>
 </head>
 
 <body>
     <div w3-include-html="./html/navleft.html"></div>
     <div w3-include-html="./html/navright.html"></div>
+    <script> w3IncludeHTML();  </script>
 
     <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
@@ -756,9 +755,6 @@
         </section>
         </div>
 
-        <script>
-            w3IncludeHTML();
-        </script>
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.bundle.js"></script>
         <script src="js/jquery.easing.js"></script>
