[FEAT] add hover effect to fields

--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
                         <!-- , with <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Niko Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>.  -->
                         I develop neuroscience-inspired AI systems and apply ML to understand human brains (Neuro &harr; AI).
                         <!-- I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. Most recently, I am developing neuroscience-inspired AI systems and applying ML to understand human brains (Neuro &harr; AI).  -->
-                    </p>
-                    <p class="mb-5 text-primary">
+                    <!-- </p>
+                    <p class="mb-5 text-primary"> -->
+                        <br/>
                         I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with a B.S. in Applied & Computational Mathematics and a B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>.
-                    </p>
+                    <!-- </p>
 
-                    <p class="mb-5 text-primary">
+                    <p class="mb-5 text-primary"> -->
+                        <br/>
                         I am into:
                         <br/>
                         <span class="field">
