[DBG] fix bug in hue filter

--- a/index.html
+++ b/index.html
@@ -46,27 +46,27 @@
                         I am into:
                         <br/>
                         <span class="field">
-                        <img src="./img/fields/brain.png" alt="" style="width:80%"><br/>
+                        <img src="./img/fields/brain.png" alt="" style="width:80%" class="field-b"><br/>
                         brain
                     </span>
                         <span class="field">
-                        <img src="./img/fields/robot.png" alt="" style="width:80%"><br/>
+                        <img src="./img/fields/robot.png" alt="" style="width:80%" class="field-r"><br/>
                         intelligence
                     </span>
                         <span class="field">
-                        <img src="./img/fields/topology.png" alt="" style="width:80%"><br/>
+                        <img src="./img/fields/topology.png" alt="" style="width:80%" class="field-t"><br/>
                         topology
                     </span>
                         <span class="field">
-                        <img src="./img/fields/psych.png" alt="" style="width:80%"><br/>
+                        <img src="./img/fields/psych.png" alt="" style="width:80%" class="field-p"><br/>
                         psychology
                     </span>
                         <span class="field">
-                        <img src="./img/fields/design.png" alt="" style="width:80%"><br/>
+                        <img src="./img/fields/design.png" alt="" style="width:80%" class="field-d"><br/>
                         design
                     </span>
                         <span class="field">
-                        <img src="./img/fields/art.png" alt="" style="width:80%"><br/>
+                        <img src="./img/fields/art.png" alt="" style="width:80%" class="field-a"><br/>
                         perception
                     </span>
                     </p>
