--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div id="loading"></div>
     <div w3-include-html="./html/navleft.html"></div>
     <div w3-include-html="./html/navright.html"></div>
     <script> w3IncludeHTML();  </script>
