--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 
 <head>
     <div w3-include-html="./html/header.html"></div>
-    <script> w3IncludeHTML();  </script>
+    <script>
+        w3IncludeHTML();
+    </script>
 </head>
 
 <body>
     <div id="loading"></div>
     <div w3-include-html="./html/navleft.html"></div>
     <div w3-include-html="./html/navright.html"></div>
-    <script> w3IncludeHTML();  </script>
+    <script>
+        w3IncludeHTML();
+    </script>
 
     <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
@@ -21,7 +25,7 @@
                     <div class="brandcolumn">
                         <a class="navbar-brand js-scroll-trigger" href="#">
                             <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profiles/profile500.jpg" alt="">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" id="profimg" src="img/profiles/profile500.jpg" alt="">
                     </span></a>
                     </div>
                     <div class="contactcolumn">
@@ -298,7 +302,7 @@
                                 <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">code</a> ]&nbsp; [
                                 <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
                                 <div class="abstract">
-                                    <p> Drawing an inspiration from behavioral studies of human decision making, we propose here a more general and flexible parametric framework for reinforcement learning that extends standard Q-learning to a two-stream model for processing positive and negative rewards, and allows to incorporate a wide range of reward-processing biases -- an important component of human decision making which can help us better understand a wide spectrum of multi-agent interactions in complex real-world socioeconomic systems, as well as various neuropsychiatric conditions associated with disruptions in normal reward processing. From the computational perspective, we observe that the proposed Split-QL model and its clinically inspired variants consistently outperform standard Q-Learning and SARSA methods, as well as recently proposed Double Q-Learning approaches, on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the Pac-Man game in a lifelong learning setting across different reward stationarities. Moreover, from the behavioral modeling perspective, our parametric framework can be viewed as a first step towards a unifying computational model capturing reward processing abnormalities across multiple mental conditions and user preferences in long-term recommendation systems.  </p>
+                                    <p> Drawing an inspiration from behavioral studies of human decision making, we propose here a more general and flexible parametric framework for reinforcement learning that extends standard Q-learning to a two-stream model for processing positive and negative rewards, and allows to incorporate a wide range of reward-processing biases -- an important component of human decision making which can help us better understand a wide spectrum of multi-agent interactions in complex real-world socioeconomic systems, as well as various neuropsychiatric conditions associated with disruptions in normal reward processing. From the computational perspective, we observe that the proposed Split-QL model and its clinically inspired variants consistently outperform standard Q-Learning and SARSA methods, as well as recently proposed Double Q-Learning approaches, on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the Pac-Man game in a lifelong learning setting across different reward stationarities. Moreover, from the behavioral modeling perspective, our parametric framework can be viewed as a first step towards a unifying computational model capturing reward processing abnormalities across multiple mental conditions and user preferences in long-term recommendation systems. </p>
                                 </div>
                             </div>
                         </div>
