[FEAT] js to change profile img

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="brandcolumn">
                         <a class="navbar-brand js-scroll-trigger" href="#">
                             <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" id="profimg" src="img/profiles/profile500.jpg" alt="">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" id="profileimg" src="" alt="">
                     </span></a>
                     </div>
                     <div class="contactcolumn">
