[FEAT] use jquery to update research questions

--- a/index.html
+++ b/index.html
@@ -51,29 +51,32 @@
                         I am into:
                         <br/>
                         <span class="field">
-                        <img src="./img/fields/brain.png" alt="" style="width:80%" class="field-img field-b"><br/>
+                        <img src="./img/fields/brain.png" alt="" style="width:80%" class="field-img" id="field-b"><br/>
                         brain
                     </span>
                         <span class="field">
-                        <img src="./img/fields/robot.png" alt="" style="width:80%" class="field-img field-r"><br/>
+                        <img src="./img/fields/robot.png" alt="" style="width:80%" class="field-img" id="field-r"><br/>
                         intelligence
                     </span>
                         <span class="field">
-                        <img src="./img/fields/topology.png" alt="" style="width:80%" class="field-img field-t"><br/>
+                        <img src="./img/fields/topology.png" alt="" style="width:80%" class="field-img" id="field-t"><br/>
                         topology
                     </span>
                         <span class="field">
-                        <img src="./img/fields/psych.png" alt="" style="width:80%" class="field-img field-p"><br/>
+                        <img src="./img/fields/psych.png" alt="" style="width:80%" class="field-img" id="field-p"><br/>
                         psychology
                     </span>
                         <span class="field">
-                        <img src="./img/fields/design.png" alt="" style="width:80%" class="field-img field-d"><br/>
+                        <img src="./img/fields/design.png" alt="" style="width:80%" class="field-img" id="field-d"><br/>
                         design
                     </span>
                         <span class="field">
-                        <img src="./img/fields/art.png" alt="" style="width:80%" class="field-img field-a"><br/>
+                        <img src="./img/fields/art.png" alt="" style="width:80%" class="field-img" id="field-a"><br/>
                         perception
                     </span>
+                    </p>
+                    <p class="handwritten" id="questions">
+                        ?
                     </p>
 
                     <!-- 
