[FEAT] img overlay

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="brandcolumn">
                         <a class="navbar-brand js-scroll-trigger" href="#">
                             <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" id="profileimg" src="./img/profiles/profile500.jpg" alt="">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" id="profileimg" src="" alt="">
                     </span></a>
                     </div>
                     <div class="contactcolumn">
@@ -50,28 +50,34 @@
                     <p class="mb-5 text-primary">
                         I am into:
                         <br/>
-                        <span class="field">
-                        <img src="./img/fields/brain.png" alt="" style="width:80%" class="field-img" id="field-b"><br/>
+                        <span class="field field-b">
+                        <img src="./img/fields/brain.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/brain-o.png" alt="" class="field-img img-top"><br/>
                         brain
                     </span>
-                        <span class="field">
-                        <img src="./img/fields/robot.png" alt="" style="width:80%" class="field-img" id="field-r"><br/>
+                        <span class="field field-r">
+                        <img src="./img/fields/robot.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/robot-o.png" alt="" class="field-img img-top"><br/>
                         intelligence
                     </span>
-                        <span class="field">
-                        <img src="./img/fields/topology.png" alt="" style="width:80%" class="field-img" id="field-t"><br/>
+                        <span class="field field-t">
+                        <img src="./img/fields/topology.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/topology-o.png" alt="" class="field-img img-top"><br/>
                         topology
                     </span>
-                        <span class="field">
-                        <img src="./img/fields/psych.png" alt="" style="width:80%" class="field-img" id="field-p"><br/>
+                        <span class="field field-p">
+                        <img src="./img/fields/psych.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/psych-o.png" alt="" class="field-img img-top"><br/>
                         psychology
                     </span>
-                        <span class="field">
-                        <img src="./img/fields/design.png" alt="" style="width:80%" class="field-img" id="field-d"><br/>
+                        <span class="field field-d">
+                        <img src="./img/fields/design.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/design-o.png" alt="" class="field-img img-top"><br/>
                         design
                     </span>
-                        <span class="field">
-                        <img src="./img/fields/art.png" alt="" style="width:80%" class="field-img" id="field-a"><br/>
+                        <span class="field field-a">
+                        <img src="./img/fields/art.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/art-o.png" alt="" class="field-img img-top"><br/>
                         perception
                     </span>
                     </p>
