[FEAT] change overlay setting

--- a/index.html
+++ b/index.html
@@ -51,32 +51,32 @@
                         I am into:
                         <br/>
                         <span class="field field-b">
-                        <img src="./img/fields/brain.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/brain.png" alt="" class="field-img img-bottom"><br/>
                         <img src="./img/fields/brain-o.png" alt="" class="field-img img-top"><br/>
                         brain
                     </span>
                         <span class="field field-r">
-                        <img src="./img/fields/robot.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/robot.png" alt="" class="field-img img-bottom"><br/>
                         <img src="./img/fields/robot-o.png" alt="" class="field-img img-top"><br/>
                         intelligence
                     </span>
                         <span class="field field-t">
-                        <img src="./img/fields/topology.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/topology.png" alt="" class="field-img img-bottom"><br/>
                         <img src="./img/fields/topology-o.png" alt="" class="field-img img-top"><br/>
                         topology
                     </span>
                         <span class="field field-p">
-                        <img src="./img/fields/psych.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/psych.png" alt="" class="field-img img-bottom"><br/>
                         <img src="./img/fields/psych-o.png" alt="" class="field-img img-top"><br/>
                         psychology
                     </span>
                         <span class="field field-d">
-                        <img src="./img/fields/design.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/design.png" alt="" class="field-img img-bottom"><br/>
                         <img src="./img/fields/design-o.png" alt="" class="field-img img-top"><br/>
                         design
                     </span>
                         <span class="field field-a">
-                        <img src="./img/fields/art.png" alt="" class="field-img"><br/>
+                        <img src="./img/fields/art.png" alt="" class="field-img img-bottom"><br/>
                         <img src="./img/fields/art-o.png" alt="" class="field-img img-top"><br/>
                         perception
                     </span>
