[FEAT] add research questions

--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
                         <img src="./img/fields/art-o.png" alt="" onmouseover="fieldA()" onmouseout="defaultText()" class="field-img img-top"><br/>
                         perception
                     </span>
-                    </p>
-                    <p class="handwritten" id="questions">
-                        ?
+                    <br/>
+                    <span class="handwritten" id="questions"> &nbsp; </span>
                     </p>
 
                     <!-- 
