[DBG] fig as inline

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with a B.S. in Applied & Computational Mathematics and a B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>.
                     </p>
                     <p class="mb-5 text-primary">
-                        I am into: <span class="handwritten" id="questions"> &nbsp; </span>
+                        I am into: 
                         <br/>
                         <span class="field field-b">
                         <img src="./img/fields/brain.png" alt="" onmouseover="fieldB()" onmouseout="defaultText()" class="field-img img-bottom"><br/>
@@ -80,6 +80,7 @@
                         <img src="./img/fields/art-o.png" alt="" onmouseover="fieldA()" onmouseout="defaultText()" class="field-img img-top"><br/>
                         perception
                     </span>
+                    <span class="handwritten" id="questions"> &nbsp; </span>
                     </p>
 
                     <!-- 
