[DBG] add missing src

--- a/index.html
+++ b/index.html
@@ -51,37 +51,37 @@
                         I am into: 
                         <br/>
                         <span class="field">
-                        <img alt="" onmouseover="fieldB()" onmouseout="defaultText()" class="field-img field-b"><br/>
+                        <img src="./img/fields/brain.png" alt="" onmouseover="fieldB()" onmouseout="defaultText()" class="field-img field-b"><br/>
                         <!-- <img src="./img/fields/brain.png" alt="" onmouseover="fieldB()" onmouseout="defaultText()" class="field-img img-bottom"><br/> -->
                         <!-- <img src="./img/fields/brain-o.png" alt="" onmouseover="fieldB()" onmouseout="defaultText()" class="field-img img-top"><br/> -->
                         brain
                     </span>
                         <span class="field">
-                        <img alt="" onmouseover="fieldR()" onmouseout="defaultText()" class="field-img field-r"><br/>
+                        <img src="./img/fields/robot.png" alt="" onmouseover="fieldR()" onmouseout="defaultText()" class="field-img field-r"><br/>
                         <!-- <img src="./img/fields/robot.png" alt="" onmouseover="fieldR()" onmouseout="defaultText()" class="field-img img-bottom"><br/> -->
                         <!-- <img src="./img/fields/robot-o.png" alt="" onmouseover="fieldR()" onmouseout="defaultText()" class="field-img img-top"><br/> -->
                         intelligence
                     </span>
                         <span class="field">
-                        <img alt="" onmouseover="fieldT()" onmouseout="defaultText()" class="field-img field-t"><br/>
+                        <img src="./img/fields/topology.png" alt="" onmouseover="fieldT()" onmouseout="defaultText()" class="field-img field-t"><br/>
                         <!-- <img src="./img/fields/topology.png" alt="" onmouseover="fieldT()" onmouseout="defaultText()" class="field-img img-bottom"><br/> -->
                         <!-- <img src="./img/fields/topology-o.png" alt="" onmouseover="fieldT()" onmouseout="defaultText()" class="field-img img-top"><br/> -->
                         topology
                     </span>
                         <span class="field">
-                        <img alt="" onmouseover="fieldP()" onmouseout="defaultText()" class="field-img field-p"><br/>
+                        <img src="./img/fields/psych.png" alt="" onmouseover="fieldP()" onmouseout="defaultText()" class="field-img field-p"><br/>
                         <!-- <img src="./img/fields/psych.png" alt="" onmouseover="fieldP()" onmouseout="defaultText()" class="field-img img-bottom"><br/> -->
                         <!-- <img src="./img/fields/psych-o.png" alt="" onmouseover="fieldP()" onmouseout="defaultText()" class="field-img img-top"><br/> -->
                         psychology
                     </span>
                         <span class="field">
-                        <img alt="" onmouseover="fieldD()" onmouseout="defaultText()" class="field-img field-d"><br/>
+                        <img src="./img/fields/design.png" alt="" onmouseover="fieldD()" onmouseout="defaultText()" class="field-img field-d"><br/>
                         <!-- <img src="./img/fields/design.png" alt="" onmouseover="fieldD()" onmouseout="defaultText()" class="field-img img-bottom"><br/> -->
                         <!-- <img src="./img/fields/design-o.png" alt="" onmouseover="fieldD()" onmouseout="defaultText()" class="field-img img-top"><br/> -->
                         design
                     </span>
                         <span class="field">
-                        <img alt="" onmouseover="fieldA()" onmouseout="defaultText()" class="field-img field-a"><br/>
+                        <img src="./img/fields/art.png" alt="" onmouseover="fieldA()" onmouseout="defaultText()" class="field-img field-a"><br/>
                         <!-- <img src="./img/fields/art.png" alt="" onmouseover="fieldA()" onmouseout="defaultText()" class="field-img img-bottom"><br/> -->
                         <!-- <img src="./img/fields/art-o.png" alt="" onmouseover="fieldA()" onmouseout="defaultText()" class="field-img img-top"><br/> -->
                         perception
