[FEAT] enable meyda

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -22,6 +22,7 @@
     <script src="../../js/d3.js"></script>
     <script src="../../js/d3-scale-chromatic.js"></script>
 
+    <script src="meyda.js"></script>
     <link href="main.css" rel="stylesheet">
 
 </head>
@@ -47,9 +48,9 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
             <div class="my-auto">
                 <h2 class="mb-5" , style="text-transform:none">VoiceID on the fly </h2>
-                <h4 class="mb-5" , style="text-transform:none">a Real-time Register-free Online-learning Speaker Recognition System</h2>
+                <h3 class="mb-5" , style="text-transform:none">a Real-time Register-free Online-learning Speaker Recognition System</h2>
 
-                <b class="text-primary"> by <a href="https://www.baihan.nyc/">Baihan Lin</a> and <a href="https://www.estherzhang.com/">Xinxin Zhang</a>, 2019 &nbsp; </b>
+                <b class="text-primary"> by <a href="https://www.baihan.nyc/">Baihan Lin</a> and <a href="https://www.estherzhang.com/">Xinxin Zhang</a>, 2020 &nbsp; </b>
                 <p class="mb-5 text-primary">
                     <br> 
                     <br>
