--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -23,6 +23,7 @@
     <script src="../../js/d3-scale-chromatic.js"></script>
 
     <script src="meyda.js"></script>
+    <script src="three.js"></script>
     <link href="main.css" rel="stylesheet">
 
 </head>
