[FEAT] simplify codes by introducing footer and prettify

--- a/html/header.html
+++ b/html/header.html
@@ -11,7 +11,19 @@
 <link href="https://fonts.googleapis.com/css?family=Rancho&display=swap" rel="stylesheet">
 
 <link href="https://www.baihan.nyc/css/bootstrap.css" rel="stylesheet">
+<link href="https://www.baihan.nyc/css/supp.css" rel="stylesheet">
 <link href="https://www.baihan.nyc/css/resume.css" rel="stylesheet">
 <link href="https://www.baihan.nyc/css/font-awesome.css" rel="stylesheet">
 <link href="https://www.baihan.nyc/css/devicons.css" rel="stylesheet">
 <link href="https://www.baihan.nyc/css/simple-line-icons.css" rel="stylesheet">
+
+<script src="https://www.baihan.nyc/js/d3.js"></script>
+<script src="https://www.baihan.nyc/js/d3-scale-chromatic.js"></script>
+<script src="https://www.baihan.nyc/js/meyda.js"></script>
+<script src="https://www.baihan.nyc/js/three.js"></script>
+<script src="https://www.baihan.nyc/js/tda.js"></script>
+
+<script src="https://www.baihan.nyc/js/jquery.min.js"></script>
+<script src="https://www.baihan.nyc/js/bootstrap.bundle.js"></script>
+<script src="https://www.baihan.nyc/js/jquery.easing.js"></script>
+<script src="https://www.baihan.nyc/js/resume.js"></script>
