--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<script src="../../js/loadhtml.js"></script>
+<script src="https://www.baihan.nyc/js/loadhtml.js"></script>
+<script src="https://www.baihan.nyc/js/prettify.js"></script>
 
 <html lang="en">
 
 <head>
-    <div w3-include-html="../../html/header.html"></div>
-    <script> w3IncludeHTML();  </script>
+    <div w3-include-html="https://www.baihan.nyc/html/header.html"></div>
+    <script> w3IncludeHTML(); </script>
 </head>
 
 <body>
-    <div w3-include-html="../../html/navleft.html"></div>
-    <div w3-include-html="../../html/navright.html"></div>
-    <script> w3IncludeHTML();  </script>
+    <div id="loading"></div>
+    <div w3-include-html="https://www.baihan.nyc/html/navleft.html"></div>
+    <div w3-include-html="https://www.baihan.nyc/html/navright.html"></div>
+    <script> w3IncludeHTML(); </script>
 
     <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
@@ -158,19 +160,9 @@
         </section>
     </div>
 
-    <script src="../../js/jquery.min.js"></script>
-    <script src="../../js/bootstrap.bundle.js"></script>
-    <script src="../../js/jquery.easing.js"></script>
-    <script src="../../js/resume.js"></script>
 </body>
-<!-- 
-        <div class="flier2"><img src="img/random/rock.png" alt="" style="width:500px;height:300px;"></div>
 
-        <div class="flier"><img src="img/random/doge.png" alt="" style="width:300px;height:400px;"></div>
-         -->
-<footer style="align:center;">&copy; Copyright 2016
-    <script>
-        new Date().getFullYear() > 2016 && document.write("-" + new Date().getFullYear());
-    </script> by Baihan Lin</footer>
+    <div w3-include-html="https://www.baihan.nyc/html/footer.html"></div>
+    <script> w3IncludeHTML(); </script>
 
 </html>
