--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -1,50 +1,20 @@
 <!DOCTYPE html>
+<script src="https://www.baihan.nyc/js/loadhtml.js"></script>
+<script src="https://www.baihan.nyc/js/prettify.js"></script>
+
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Baihan Lin's personal website">
-    <meta name="author" content="Baihan Lin">
-    <title>Baihan Lin</title>
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
-    <link href="../../css/bootstrap.css" rel="stylesheet">
-    <link href="../../css/resume.css" rel="stylesheet">
-    <link href="../../css/font-awesome.css" rel="stylesheet">
-    <link href="../../css/devicons.css" rel="stylesheet">
-    <link href="../../css/simple-line-icons.css" rel="stylesheet">
-
-    <!-- <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
-    <script src="../../js/d3.js"></script>
-    <script src="../../js/d3-scale-chromatic.js"></script>
-
-    <script src="meyda.js"></script>
-    <script src="three.js"></script>
-    <link href="main.css" rel="stylesheet">
-
+    <div w3-include-html="https://www.baihan.nyc/html/header.html"></div>
+    <script> w3IncludeHTML(); </script>
 </head>
 
-<style type="text/css">
-    /* Format X and Y Axis */
-    
-    .axis path,
-    .axis line {
-        fill: none;
-        stroke: black;
-        shape-rendering: crispEdges;
-    }
-    
-    .axis text {
-        /*font-family: sans-serif;*/
-        font-size: 11px;
-    }
-</style>
-
 <body>
+    <!-- <div id="loading"></div>
+    <div w3-include-html="https://www.baihan.nyc/html/navleft.html"></div>
+    <div w3-include-html="https://www.baihan.nyc/html/navright.html"></div>
+    <script> w3IncludeHTML(); </script>
+     -->
         <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
             <div class="my-auto">
@@ -85,25 +55,10 @@
             </div>
         </section>
     </div>
-    <!-- Bootstrap core JavaScript -->
-    <script src="../../js/jquery.min.js"></script>
-    <script src="../../js/bootstrap.bundle.js"></script>
-    <!-- Plugin JavaScript -->
-    <script src="../../js/jquery.easing.js"></script>
-    <!-- Custom scripts for this template -->
-    <script src="../../js/resume.js"></script>
-    <script src="//unpkg.com/force-graph"></script>
-    <script src="../jsfunctions/tda.js"></script>
-    <!-- <script src="https://d3js.org/d3.v5.js"></script> -->
-</body>
-<!-- 
-        <div class="flier2"><img src="img/random/rock.png" alt="" style="width:500px;height:300px;"></div>
 
-        <div class="flier"><img src="img/random/doge.png" alt="" style="width:300px;height:400px;"></div>
-         -->
-<footer style="align:center;">&copy; Copyright 2016
-    <script>
-        new Date().getFullYear() > 2016 && document.write("-" + new Date().getFullYear());
-    </script> by Baihan Lin</footer>
+</body>
+
+    <div w3-include-html="https://www.baihan.nyc/html/footer.html"></div>
+    <script> w3IncludeHTML(); </script>
 
 </html>
