[DBG] put prettify into header

--- a/html/footer.html
+++ b/html/footer.html
@@ -8,6 +8,8 @@
 <script src="https://www.baihan.nyc/js/bootstrap.bundle.js"></script>
 <script src="https://www.baihan.nyc/js/jquery.easing.js"></script>
 <script src="https://www.baihan.nyc/js/resume.js"></script>
+<script src="https://www.baihan.nyc/js/prettify.js"></script>
+
 
 <!-- 
         <div class="flier2"><img src="img/random/rock.png" alt="" style="width:500px;height:300px;"></div>
