--- a/html/navleft.html
+++ b/html/navleft.html
@@ -20,7 +20,7 @@ setTimeout(hideLoader, 10 * 1000);
 <script src="https://www.baihan.nyc/js/bootstrap.bundle.js"></script>
 <script src="https://www.baihan.nyc/js/jquery.easing.js"></script>
 <script src="https://www.baihan.nyc/js/resume.js"></script>
-<script src="https://www.baihan.nyc/js/prettify.js"></script>
+<!-- <script src="https://www.baihan.nyc/js/prettify.js"></script> -->
 
 <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="sideNav">
     <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-transform:none;" href="https://www.baihan.nyc/">Baihan Lin&nbsp;&nbsp;</a></h3>
