[DBG] remove loader

--- a/html/navleft.html
+++ b/html/navleft.html
@@ -1,4 +1,4 @@
-<div id="loading"></div>
+<!-- <div id="loading"></div>
 <script>
 function hideLoader() {
     $('#loading').hide();
@@ -8,7 +8,7 @@ function waithideLoader() {
 }
 setTimeout(waithideLoader, 4 * 1000);
 setTimeout(hideLoader, 10 * 1000);
-</script>>
+</script>> -->
 
 <script src="https://www.baihan.nyc/js/d3.js"></script>
 <script src="https://www.baihan.nyc/js/d3-scale-chromatic.js"></script>
