--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <!-- <div id="loading"></div>
-    <div w3-include-html="https://www.baihan.nyc/html/navleft.html"></div>
+    <!-- <div w3-include-html="https://www.baihan.nyc/html/navleft.html"></div>
     <div w3-include-html="https://www.baihan.nyc/html/navright.html"></div>
     <script> w3IncludeHTML(); </script>
      -->
