--- a/index.html
+++ b/index.html
@@ -769,6 +769,12 @@
         </div>
 
 
+<script src="https://www.baihan.nyc/js/jquery.min.js"></script>
+<script src="https://www.baihan.nyc/js/bootstrap.bundle.js"></script>
+<script src="https://www.baihan.nyc/js/jquery.easing.js"></script>
+<script src="https://www.baihan.nyc/js/resume.js"></script>
+<!-- <script src="https://www.baihan.nyc/js/prettify.js"></script> -->
+
 </body>
 
     <div w3-include-html="https://www.baihan.nyc/html/footer.html"></div>
