[DBG] put back loader

--- a/html/header.html
+++ b/html/header.html
@@ -1,3 +1,5 @@
+<div id="loading"></div>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Baihan Lin's personal website">
