[DBG] package js

--- a/index.html
+++ b/index.html
@@ -768,12 +768,8 @@
         </section>
         </div>
 
-
-<script src="https://www.baihan.nyc/js/jquery.min.js"></script>
-<script src="https://www.baihan.nyc/js/bootstrap.bundle.js"></script>
-<script src="https://www.baihan.nyc/js/jquery.easing.js"></script>
-<script src="https://www.baihan.nyc/js/resume.js"></script>
-<!-- <script src="https://www.baihan.nyc/js/prettify.js"></script> -->
+    <div w3-include-html="https://www.baihan.nyc/html/bodyjs.html"></div>
+    <script> w3IncludeHTML(); </script>
 
 </body>
 
