--- a/proj/dynRSA/index.html
+++ b/proj/dynRSA/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <!-- <div id="loading"></div> -->
     <div w3-include-html="https://www.baihan.nyc/html/navleft.html"></div>
     <div w3-include-html="https://www.baihan.nyc/html/navright.html"></div>
     <script> w3IncludeHTML(); </script>
@@ -105,6 +104,9 @@
         </section>
     </div>
 
+    <div w3-include-html="https://www.baihan.nyc/html/bodyjs.html"></div>
+    <script> w3IncludeHTML(); </script>
+    
 </body>
 
     <div w3-include-html="https://www.baihan.nyc/html/footer.html"></div>
