--- a/proj/neuralMDL/index.html
+++ b/proj/neuralMDL/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <!-- <div id="loading"></div> -->
     <div w3-include-html="https://www.baihan.nyc/html/navleft.html"></div>
     <div w3-include-html="https://www.baihan.nyc/html/navright.html"></div>
     <script> w3IncludeHTML(); </script>
@@ -100,6 +99,9 @@
             </div>
         </section>
     </div>
+
+    <div w3-include-html="https://www.baihan.nyc/html/bodyjs.html"></div>
+    <script> w3IncludeHTML(); </script>
 
 </body>
 
