--- a/proj/proj/index.html
+++ b/proj/proj/index.html
@@ -30,6 +30,9 @@
         </section>
     </div>
 
+    <div w3-include-html="https://www.baihan.nyc/html/bodyjs.html"></div>
+    <script> w3IncludeHTML(); </script>
+    
 </body>
 
     <div w3-include-html="https://www.baihan.nyc/html/footer.html"></div>
